
SUBDIRS = src
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -I../include

library_includedir = $(includedir)/ELiPS

library_include_HEADERS = include/ELiPS/define.h\
include/ELiPS/scalar.h\
include/ELiPS/bls12_generate_curve.h\
include/ELiPS/bls12_generate_parameter.h\
include/ELiPS/bls12_init.h\
include/ELiPS/mpn.h\
include/ELiPS/fp.h\
include/ELiPS/fp2.h\
include/ELiPS/fp4.h\
include/ELiPS/fp12.h\
include/ELiPS/efp.h\
include/ELiPS/efp2.h\
include/ELiPS/efp4.h\
include/ELiPS/efp12.h